# qBotNetworkPlugin

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  TestSuite  default.nix  shell.nix
common/: ihostinterface.h  qtpluginsinterface.h  qtpluginsunitsdefs.h  unitsdef.h
lib/qtplugins/: qtplugins.h
po/: POTFILES.in
qBotNetwork/: CMakeLists.txt  QBotNetworkPlugin.json  moc_qbotnetworkplugin.cpp  qBotNetworkPlugin.pro  qbotnetworkplugin.cpp  qbotnetworkplugin.h
src/: Makefile.am  init.cpp
testSuite/: CMakeLists.txt  TestSuite.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
warzone2100/: configure.ac
warzone2100/lib/qtplugins/: Makefile.am  interface.h  qtplugins.cpp  qtplugins.h  qtplugins.pro  qtpluginsinterface.h  qtpluginsunitsdefs.h
warzone2100/po/: POTFILES.in
warzone2100/src/: loop.cpp
